fix(admin): prevent grapher to overflow in admin

--- a/packages/@ourworldindata/grapher/src/controls/ActionButtons.scss
+++ b/packages/@ourworldindata/grapher/src/controls/ActionButtons.scss
@@ -12,6 +12,7 @@ $paddingLeftRight: 12px; // keep in sync with PADDING_LEFT_RIGHT
     ul {
         list-style: none;
         height: $actionButtonHeight;
+        padding: 0;
     }
 
     li {
